<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/control_bg"
    android:gravity="center_vertical"
    android:orientation="vertical" >
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imagePrevious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/previous_button"
                android:contentDescription="@string/play_previous"
                android:src="@drawable/player_prev_normal" />

            <ImageButton
                android:id="@+id/imagePlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/pause_button"
                android:layout_marginLeft="20.0dip"
                android:layout_marginRight="20.0dip"
                android:contentDescription="@string/play"
                android:src="@drawable/player_pause" />

            <ImageButton
                android:id="@+id/imageNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/next_button"
                android:contentDescription="@string/play_next"
                android:src="@drawable/player_next_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="30.0dip"
        android:paddingRight="30.0dip" >

        <TextView
            android:id="@+id/playTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10.0dip"
            android:text="@string/playTime"
            android:textColor="#ffffffff" />

        <SeekBar
            android:id="@+id/seekBar"
            style="@style/ProgressBar_Mini"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:thumb="@android:drawable/presence_invisible"
            android:thumbOffset="0.0dip" />

        <TextView
            android:id="@+id/totalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:text="@string/totalTime"
            android:textColor="#ffffffff" />
    </LinearLayout>

</LinearLayout>